Applying backface-visibility fix for iOS

--- a/src/client/components/workLog/worklog.less
+++ b/src/client/components/workLog/worklog.less
@@ -106,6 +106,7 @@
     .is-front,
     .is-back {
         border: 4px solid #000;
+        -webkit-backface-visibility: hidden;
         -ms-backface-visibility: hidden;
         backface-visibility: hidden;
         transition: transform 0.3s linear 0.15s;
